--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,45 +1,62 @@
-name: CI
+name: Build, Publish & Scan
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    # Build the image once a day to ensure security updates
+    # are recent & the build continues to pass.
+    - cron: '0 0 * * *'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+    branches:
+      - main
+
+  pull_request:
+    branches:
+      - main
+
+env:
+  IMAGE_TAGS: |
+    ghcr.io/${{ github.repository_owner }}/flocker:latest
+    ghcr.io/${{ github.repository_owner }}/flocker:${{ github.sha }}
+
 jobs:
-  build-and-push:
-    # The type of runner that the job will run on
+  build-and-scan:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    permissions:
+      contents: read
+      packages: write
 
-      - 
-        name: Build and push Docker image
-        uses: docker/build-push-action@v2.0.1
+    steps:
+      - name: Check out source
+        uses: actions/checkout@v2
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v2.6.1
         with:
           context: .
-          file: ./Dockerfile
-          tags: riaanduplessis/flutter:latest
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.IMAGE_TAGS }}
+          platforms: linux/amd64,linux/arm64
+
+      - name: Run Anchore scan with GitHub Advanced Security code scanning
+        uses: anchore/scan-action@main
+        with:
+          image: ghcr.io/${{ github.repository_owner }}/flocker:${{ github.sha }}
+          acs-report-enable: true
+
+      - name: Upload Anchore Scan Report
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
