--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Check out source
         uses: actions/checkout@v2
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v1
