--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,4 +1,4 @@
-name: Build, Publish & Scan
+name: Build & Scan
 
 on:
   schedule:
@@ -53,12 +53,15 @@ jobs:
           tags: ${{ env.IMAGE_TAGS }}
 
       - name: Run Anchore scan with GitHub Advanced Security code scanning
-        uses: anchore/scan-action@main
+        uses: anchore/scan-action@v3
+        id: scan
         with:
           image: ghcr.io/${{ github.repository_owner }}/flocker:${{ github.sha }}
           acs-report-enable: true
+          fail-build: false
+          severity-cutoff: critical
 
       - name: Upload Anchore Scan Report
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: results.sarif
+          sarif_file: ${{ steps.scan.outputs.sarif }}
