--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -26,6 +26,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      security_events: write
 
     steps:
       - name: Check out source
