--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -15,21 +15,19 @@ on:
       - main
 
 env:
-  IMAGE_TAGS: |
-    ghcr.io/${{ github.repository_owner }}/flocker:latest
-    ghcr.io/${{ github.repository_owner }}/flocker:${{ github.sha }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-scan:
+  build-and-push:
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
       packages: write
-      security-events: write
 
     steps:
-      - name: Check out source
+      - name: Checkout source
         uses: actions/checkout@v3
 
       - name: Set up QEMU
@@ -39,16 +37,25 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
+        if: github.event_name == 'push'
         uses: docker/login-action@v2.0.0
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push image
         uses: docker/build-push-action@v3.0.0
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.IMAGE_TAGS }}
+          # Only push the image to the registry on push to main.
+          push: ${{ github.event_name == 'push' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          pull: true
