--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,9 +1,7 @@
-name: Build & Scan
+name: Build & Push
 
 on:
   schedule:
-    # Build the image once a day to ensure security updates
-    # are recent & the build continues to pass.
     - cron: '0 0 * * *'
 
   push:
@@ -37,8 +35,8 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to GitHub Container Registry
-        if: github.event_name == 'push'
-        uses: docker/login-action@v2.0.0
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -46,16 +44,16 @@ jobs:
 
       - name: Extract metadata
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push image
-        uses: docker/build-push-action@v3.0.0
+        uses: docker/build-push-action@v3
         with:
           context: .
           # Only push the image to the registry on push to main.
-          push: ${{ github.event_name == 'push' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           pull: true
