--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -57,3 +57,26 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           pull: true
+
+  scan:
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    needs: build-and-push
+    permissions:
+      packages: read
+      security-events: write
+
+    steps:
+      - name: Run Anchore scan with GitHub Advanced Security code scanning
+        id: scan
+        uses: anchore/scan-action@v3
+        with:
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          acs-report-enable: true
+          fail-build: false
+          severity-cutoff: critical
+
+      - name: Upload Anchore Scan Report
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
