--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -67,6 +67,9 @@ jobs:
       security-events: write
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
       - name: Run Anchore scan with GitHub Advanced Security code scanning
         id: scan
         uses: anchore/scan-action@v3
@@ -77,6 +80,6 @@ jobs:
           severity-cutoff: critical
 
       - name: Upload Anchore Scan Report
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
